# DigitalTwin-for-MyPalletizer

./: README.md  UpgradeLog.htm
Assets/: STEPRoboterArm.fbx
Assets/Scenes/: SampleScene.unity
Assets/Scripts/: Demo.cs  GripperDownConstraint.cs  JointActuator.cs  MyPalletizerAdapter.cs  RobotLEDController.cs  UnityUdpBridge.cs
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
ProjectSettings/: ProjectSettings.asset
PythonCoding/: Demo.py  IRobotControl.py  MyPalletizerController.py  RobotControl.py  RobotFactory.py  pyproject.toml
PythonCoding/src/examples/: demo_basic.py
PythonCoding/src/mypalletizer/: __init__.py  controller.py  errors.py  protocol.py  robot.py
unity/Assets/Scenes/: SampleScene.unity
unity/Assets/Scripts/: GripperDownConstraint.cs  JointActuator.cs  MyPalletizerAdapter.cs  RobotLEDController.cs  UnityUdpBridge.cs
