[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mypalletizer-api"
version = "0.1.0"
description = "API for MyPalletizer 260 (real/virtual/both)."
requires-python = ">=3.10"
dependencies = ["pymycobot"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]